new error resolved for target port

--- a/nginx-svc.yaml
+++ b/nginx-svc.yaml
@@ -1,1 +1,13 @@
-this is the dev branch content
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-nginx-svc
+  labels:
+    app: nginx
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: nginx
