--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -12,8 +12,8 @@ spec:
       labels:
         app: nginx
     spec:
-      container:
-      -  name: nginx
-         image: nginx:1.14.2
-         ports:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
          -  containerPort: 80
