--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
         ports:
          -  containerPort: 80
