--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-nginx
+  name: my-webapp
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: webapp2
   replicas: 3
   template:
     metadata:
       labels:
-        app: nginx
+        app: webapp2
     spec:
       containers:
-      - name: nginx
+      - name: webapp
         image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
         ports:
          -  containerPort: 80
